RRPP VERSION 0.4.2 (Patch release)

BUG FIXES 
    o Tweaked support code for lm.rrpp to work better with missing data frames.
    o Fixed eigen absolute eigenvalue issue with Cov.proj.
    o Added forgotten code from last update to fix non-full rank design matrices.
    o Fixed trajectory.analysis traj.list issue, to not use grep for sorting trajectories.  (Now lexical ordering of interactions is used.)
    o Changed det to determinant in all needing functions, to use modulus for 
    near-singular matrices
    o Fixed bug in plot.lm.rrpp (code lines out of order)
--------------------------------------------------------------------------------

CHANGES IN RRPP VERSION 0.4.1 (Patch release)

NEW FEATURES

OTHER CHANGES
    o Updated source in Description.

BUG FIXES 
    o Fixed univariate data issue with model.comparison
    o Fixed xlab flexibility issue for regression plots in plot.procD.lm
    
--------------------------------------------------------------------------------

CHANGES IN RRPP VERSION 0.4.0 (Minor release)

NEW FEATURES
    o manova.update function
    o trajectory.analysis function
    o reveal.model.designs function
    o New vignette for ANOVA versus MANOVA in RRPP

OTHER CHANGES
    o Added a pairwise variance comparison for the pairwise function.

BUG FIXES 
    o Tuned F-stat calculations to allow for model-specific residual 
    variances, for multiple terms.
    o Updated procD.lm to better work with data in the gloabl 
    environment rather than a data frame. 

--------------------------------------------------------------------------------

CHANGES IN RRPP VERSION 0.3.0 (Minor release)

NEW FEATURES
    o Added print.summary.pairwise.
    o Added model.comparison function.
    o Added classify function.
OTHER CHANGES
    o Added an update to allow classify to work on univeraite data.
BUG FIXES 
    o Tuned criterion for assessing whether generalized inverse should be 
    performed.