@@ -1,5 +1,5 @@
 Package: RRPP
-Date: 2019-05-13
+Date: 2019-05-15
 Type: Package
 Title: Linear Model Evaluation with Randomized Residuals in a Permutation Procedure
 Version: 0.4.2
