@@ -1,9 +1,9 @@
-4ac9d5f84beae461a93a2ac7a9e84ea9 *cran-comments.md
+9d82b7188d7b4b1c70e2d3245594ea59 *cran-comments.md
 0033a37910a893b33a05c44e405022e0 *data/motionpaths.rda
 87b2565a0e24012435c3090aa3b96c06 *data/PlethMorph.rda
 4b4ee52bfcac42caf2b6b3c506af6db0 *data/Pupfish.rda
 b7ceda4ee18eb3d0d3f966360dc02936 *data/PupfishHeads.rda
-2fbc09d855306a4f99e53839eba87928 *DESCRIPTION
+aa995d816807635ee396939e6067fa84 *DESCRIPTION
 4b9ec9953a6af5354c47d2f9c8ff5922 *inst/CITATION
 00cb966631067dc597098ccceb3b84f8 *man/add.trajectories.Rd
 da78dcbc0abb4e22926a34272552cf1f *man/anova.lm.rrpp.Rd
@@ -12,7 +12,7 @@ eef4721fad3a88829eaef7937229dd7c *man/classify.Rd
 017bd97e98d3dcd432a33e32945757df *man/fitted.lm.rrpp.Rd
 980362f1968f69c5a3ef464de7cad870 *man/lm.rrpp.Rd
 d0e291d2a7f237e0a69145dd8c61b44e *man/manova.update.Rd
-b08077f2ad22b38d6e0ecf63660ed18c *man/model.comparison.Rd
+a5e7f673b5e559b2adec34bfdb47749d *man/model.comparison.Rd
 c75db7099ad7a5d9bf80757369e495ea *man/motionpaths.Rd
 5505a0acd9e340f6a19fdb932f7979a6 *man/pairwise.Rd
 4ba4f9fdbeffa3718c5c2bca0db78ad2 *man/PlethMorph.Rd
@@ -51,17 +51,17 @@ a80a54cfe4673d90783a3ba49f9b4535 *man/summary.pairwise.Rd
 829ab7e9505dcee579a3546212fe4804 *man/trajectory.analysis.Rd
 600001722c89e75928dbe4984812fdc5 *man/vec.cor.matrix.Rd
 8dd28dfe65e0542561bc6096514f7d94 *NAMESPACE
-a693f637b4c684e4d7b4a26bb51c6587 *NEWS
+7d3faa767aac1e05640f90087cc4469f *NEWS
 1eeb1c1bf2a1e622543831c976dd0887 *R/anova.lm.rrpp.r
 c2cda15833b34d15cbc97c9cd4530666 *R/classify.r
 52536f21f7ea4cdcfa3ebfe15b4ffbac *R/coef.lm.rrpp.r
 30e3b549f894529b209bef8b3b86b85d *R/lm.rrpp.r
 10b4f87d160a6c9a93012bea6ecddac3 *R/manova.update.r
-d0c2e9bfde3601544d96c22161e1e4ae *R/model.comparison.r
+a7921e238ecbbd7c9382c0dd7e06eb2b *R/model.comparison.r
 c6867066687afcd124b93086e60bd82b *R/pairwise.r
 d0ba1ce3ec27cb68ab30db856e025784 *R/predict.lm.rrpp.r
 be65a023ec04fe716867de7a1907b645 *R/reveal.model.designs.r
-e46cbff761668fea655ea41ef3d111a9 *R/RRPP.support.code.r
+afa99e2c3ea6dc2620f867451b3f1130 *R/RRPP.support.code.r
 b89fcf6916542d1b9659736f4699c83c *R/RRPP.utils.r
 7b0567386b877e39cd8f6b38ef3babe5 *R/shared.support.code.r
 7242e550d45113e1df449e43ecd0c59f *R/trajectory.analysis.r
