@@ -1,9 +1,10 @@
 ## Resubmission
-This is a patch, version 0.4.1, that fixes two innocuous bugs in version 0.4.0.
-This will have no effect on dependencies, as there are no functional changes.
+This is a patch, version 0.4.2, that fixes a few bugs in version 0.4.1, and adds two
+arguments to one function.This will have no effect on dependencies, as there are no 
+functional changes.
 
 ## Test environments
-* local OS X install, R 3.5.3
+* local OS X install, R 3.6.0
 * win-builder (devel and release)
 * R-hub (all platforms)
 
