@@ -4,12 +4,20 @@
 \alias{model.comparison}
 \title{Model Comparisons, in terms of the log-likelihood or covariance trace}
 \usage{
-model.comparison(..., type = c("cov.trace", "logLik"))
+model.comparison(..., type = c("cov.trace", "logLik"), tol = NULL,
+  pc.no = NULL)
 }
 \arguments{
 \item{...}{Any number of lm.rrpp class objects for model fits to be compared.}
 
 \item{type}{An argument to choose between log-likelihood or covariance trace results}
+
+\item{tol}{If type = logLik, tol is a tolerance value between 0 and 1, indicating the magnitude below which 
+components should be omitted (if standard deviations of components are less than the eigenvalue of the 
+first component times the tolerance), for calculating the log-likelihood.}
+
+\item{pc.no}{If type = logLik, an optional value to indicate the number of principal components (maximum rank) to use 
+for calculating the log-likelihood.}
 }
 \value{
 An object of class \code{model.comparison} is a data frame with either log-likelihoods
@@ -33,7 +41,15 @@ p is the appropriate dimension (not number of variables) of the covariance matri
  
 In the case that "logLik" is chosen for the argument, type, AIC scores are calculated.  These scores
 may not perfectly match other packages or software that calculate AIC for multivariate data, if ridge regularization
-was used (and if other packages let p = the number of data variables).  Users can construct their own tables 
+was used (and if other packages require p = the number of data variables).  When choosing logLik as the type of comparison,
+it might be a good idea to adjust the tolerance or number of data principal components (PC).  The default (NULL) values will
+use all data dimensions to calculate log-likelihoods, which might cause problems if the number of variables exceeds the number 
+of observations (producing singular residual covariance matrices).  However, one should not reduce data dimensions haphazardly,
+as this can lead to poor estimates of log-likelihood.  Furthermore, using the tolernace argument could result in different
+numbers of principal components used for each model to calculate log-likelihoods, which might be a concern for comparing models.  
+If both tol and pc.no arguments are used, the solution will use the fewest PCs produced by either argument.
+
+Users can construct their own tables 
 from the results but this function does not attempt to summarize results, as interpreting results requires 
 some arbitrary decisions.  The \code{\link{anova}} function explicitly tests multiple models and can be used for nested 
 model comparisons.
@@ -55,7 +71,7 @@ fit5 <- lm.rrpp(coords ~ logSize + Pop, data = Pupfish, iter = 0, print.progress
 fit6 <- lm.rrpp(coords ~ logSize + Sex * Pop, data = Pupfish, iter = 0, print.progress = FALSE)
 
 modComp1 <- model.comparison(fit1, fit2, fit3, fit4, fit5, fit6, type = "cov.trace")
-modComp2 <- model.comparison(fit1, fit2, fit3, fit4, fit5, fit6, type = "logLik")
+modComp2 <- model.comparison(fit1, fit2, fit3, fit4, fit5, fit6, type = "logLik", tol = 0.01)
 
 summary(modComp1)
 summary(modComp2)
